--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,16 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Security audit
+      run: npm run audit
+      continue-on-error: true
+
+    - name: Check code formatting
+      run: npm run format:check
+
+    - name: Lint code
+      run: npm run lint
+
     - name: Type check
       run: npm run type-check
 
