--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "echo 'Linting disabled - using TypeScript compiler for type checking'",
-    "lint:fix": "echo 'Linting disabled - using TypeScript compiler for type checking'",
+    "lint": "eslint 'src/**/*.ts'",
+    "lint:fix": "eslint 'src/**/*.ts' --fix",
+    "format": "prettier --write 'src/**/*.ts'",
+    "format:check": "prettier --check 'src/**/*.ts'",
     "type-check": "tsc --noEmit",
+    "audit": "npm audit --audit-level=high",
     "package": "npm run build && npm run package:zip",
     "package:zip": "zip -r ai-bookmark-organizer.zip dist/ manifest.json popup.html options.html styles/ icons/ -x '*.map'",
     "clean": "rm -rf dist/ coverage/ ai-bookmark-organizer.zip",
@@ -29,8 +32,11 @@
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.2.0",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
